Compute metrics on slice for interactive rotation axis determination

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *~
 experiments/p05/pathtolastreco
-
-
+./experiments/p05/pathtolastreco
+experiments/p05/pathtolastscan
+./experiments/p05/pathtolastscan
 
