--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ experiments/p05/pathtolastreco
 ./experiments/p05/pathtolastreco
 experiments/p05/pathtolastscan
 ./experiments/p05/pathtolastscan
+experiments/p05/pathtolastraw
+./experiments/p05/pathtolastraw
 
