--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ experiments/p05/path_to_latest_scan
 ./experiments/p05/pathtolastscan
 experiments/p05/path_to_latest_raw
 ./experiments/p05/pathtolastraw
-
+scratch*.m
 
