Add user data. Refactor. Add utilities.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,13 @@
 path_to_reco
 path_to_scan
 path_to_raw
+
+
+# Windows default autosave extension
 *.asv
 
+# OSX / *nix default autosave extension
+*.m~
 
-
+# Compiled MEX binaries (all platforms)
+*.mex*
